syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ljzn.grpc.client";
option objc_class_prefix = "CLIENT";

import "client/client.message.proto";
import "version/version.message.proto";

package VisitorSystem_cq;


message LoginRequest {
    ClientMessage client = 1; 
    string client_secret = 2; //设备编号的加盐MD5值，盐值由客户端与服务器端约定
    int32 belongId = 3;
}

message LoginResponse {
    int32 code = 1;
    string message = 2;
    string server_secret = 3;
    int64 serverVersion = 4;
    repeated VersionMessage versionMessages = 5; //登录成功后返回当前系统的各数据版本，失败则不返回
}

message LogoutRequest {
    string clientId = 1;
}

message LogoutResponse {
    int32 code = 1;
    string message = 2;
}

message HeartbeatRequest {
    string clientId = 1;
}

message HeartbeatResponse {
    int32 code = 1;
    string message = 2;
    int64 counter = 3;
}

service ClientAuthService {
    rpc Login (LoginRequest) returns (LoginResponse){};
    rpc Logout (LogoutRequest) returns (LogoutResponse){};
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse){}; //经典heartbeat 每一条新建一次连接
    rpc HeartbeatStream (stream HeartbeatRequest) returns (stream HeartbeatResponse){}; //keep-alive heartbeat 连接不会断
}